# S.O.L.I.D-Server

./: CMakeLists.txt  MatrixBuilder.cpp  MatrixBuilder.h  Position.cpp  Position.h  README.md  State.cpp  State.h  main.cpp
CacheManagers/: CacheManager.cpp  CacheManager.h
Handlers/: ClientHandler.h  IHandler.h  MatrixHandler.cpp  MatrixHandler.h  MyClientHandler.cpp  MyClientHandler.h  StringHandler.cpp  StringHandler.h
Searchables/: ISearchable.h  Matrix.cpp  Matrix.h
Searchers/: Astar.h  BFS.h  BestFS.cpp  BestFS.h  DFS.h  ISearcher.h  Searcher.cpp  Searcher.h
Servers/: BasicServer.cpp  BasicServer.h  IServer.h  ParallelServer.cpp  ParallelServer.h  SerialServer.cpp  SerialServer.h
Solver/: ISolver.h  SearchSolver.cpp  SearchSolver.h  StringReverser.cpp  StringReverser.h
python scripts/: auto_client.py  parallel_tester.py
